k8s/traefik2/ingressroute-resource.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-resource-traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/hello`)
    services:
    - name: hello-server
      port: 8080
